--- a/style.css
+++ b/style.css
@@ -24,6 +24,16 @@
 	--font-weight-extra-bold: 800;
 }
 
+* {
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	display: flex;
+	background-color: var(--color-white);
+}
+
 .alert {
 	border-radius: 5px;
 	height: 50px;
@@ -52,3 +62,8 @@
 - Mobile: 375px
 - Desktop: 1440px
 */
+@media screen and (min-width: 376px) {
+	.result-card {
+		box-shadow: 8px 8px 20px 5px var(--color-pale-blue);
+	}
+}
