--- a/style.css
+++ b/style.css
@@ -34,6 +34,13 @@ body {
 	background-color: var(--color-white);
 }
 
+.result-card {
+	display: flex;
+	flex-direction: column;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
 .alert {
 	border-radius: 5px;
 	height: 50px;
