--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
 	--color-orange-yellow: hsl(39, 100%, 56%);
 	--color-green-teal: hsl(166, 100%, 37%);
 	--color-cobalt-blue: hsl(234, 85%, 45%);
-	--color-light-red-bg: hsl(0, 100%, 95%);
-	--color-orange-yellow-bg: hsl(39, 100%, 95%);
-	--color-green-teal-bg: hsl(166, 100%, 95%);
-	--color-cobalt-blue-bg: hsl(234, 85%, 95%);
+	--color-light-red-bg: hsl(0, 100%, 98%);
+	--color-orange-yellow-bg: hsl(39, 100%, 98%);
+	--color-green-teal-bg: hsl(166, 100%, 97%);
+	--color-cobalt-blue-bg: hsl(234, 85%, 98%);
 	--color-white: hsl(0, 0%, 100%);
 	--color-pale-blue: hsl(221, 100%, 96%);
 	--color-light-lavender: hsl(241, 100%, 89%);
@@ -117,26 +117,42 @@ h5 {
 }
 
 .alert {
-	border-radius: 5px;
-	height: 50px;
+	padding: 0.7rem 0.9rem;
+	height: 2rem;
 	display: flex;
+	align-items: center;
+	border-radius: 0.55rem;
+	font-weight: var(--font-weight-bold);
+}
+.alert > img {
+	width: 1.25rem;
+	height: 1.25rem;
+}
+.alert > span {
+	margin-left: 0.5rem;
 }
 .alert > .breadcrumb {
+	margin-left: auto;
 	color: var(--color-dark-gray-blue);
+	font-weight: var(--font-weight-extra-bold);
 }
 .alert > .breadcrumb > .overall {
 	color: gray;
 }
 .alert.danger {
+	color: var(--color-light-red);
 	background-color: var(--color-light-red-bg);
 }
 .alert.warning {
+	color: var(--color-orange-yellow);
 	background-color: var(--color-orange-yellow-bg);
 }
 .alert.success {
+	color: var(--color-green-teal);
 	background-color: var(--color-green-teal-bg);
 }
 .alert.info {
+	color: var(--color-cobalt-blue);
 	background-color: var(--color-cobalt-blue-bg);
 }
 
