--- a/style.css
+++ b/style.css
@@ -108,12 +108,29 @@ h5 {
 	color: hsla(0, 0%, 100%, 0.4);
 }
 
+.result-card > section:first-child .feedback > h3 {
+	font-size: 1.4rem;
+	font-weight: var(--font-weight-medium);
+}
+
 .result-card > section:first-child .feedback > p {
 	color: rgb(191, 191, 191);
 	margin: 0.5rem 0;
 }
 
 .result-card > section:last-child {
+	padding: 1.25rem 1.5rem;
+}
+
+.result-card > section:last-child header {
+	font-weight: var(--font-weight-bold);
+}
+
+.result-card > section:last-child > .summary-items {
+	margin: 1.25rem 0;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
 
 .alert {
